# perpfut

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
apps/web/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
docs/: architecture.md  backtesting.md  coinbase.md  event-schema.md  mvp-readiness.md  operator-api.md  performance-reporting.md  research-workflow.md  runbook.md  strategy-iteration.md  strategy-research.md  trading-contract.md
runs/: README.md
skills/: README.md
skills/add-signal/: SKILL.md
skills/investigate-failure/: SKILL.md
skills/refresh-coinbase-fixtures/: SKILL.md
skills/run-paper/: SKILL.md
src/perpfut/: __init__.py  analysis.py  backtest_artifacts.py  backtest_data.py  backtest_history.py  backtest_progress.py  backtest_runner.py  backtest_suite.py  cli.py  config.py  domain.py  engine.py  exchange_coinbase.py  experiment.py  live_execution.py  portfolio_history.py  portfolio_optimizer.py  portfolio_runs.py  preflight.py  reconciliation.py  risk.py  run_history.py  signal_mean_reversion.py  signal_momentum.py  sim.py  sleeve_backtest.py  sleeve_history.py  strategy_instances.py  strategy_registry.py  telemetry.py
tests/integration/: test_api_backtests.py  test_api_health.py  test_api_paper_runs.py  test_api_portfolio_runs.py  test_api_research_controls.py  test_api_runs.py  test_api_sleeves.py  test_backtest_suite.py  test_experiment_cli.py  test_live_execution.py  test_mvp_smoke.py  test_paper_engine.py  test_portfolio_optimizer_integration.py  test_preflight.py  (+2 more)
(+67 files in other folders)
